--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,17 @@
 0x01-variables_if_else_while/100-print_comb3.c~
 0x01-variables_if_else_while/101-print_comb4.c~
 0x01-variables_if_else_while/102-print_comb5.c~
+0x06-pointers_arrays_strings/0-strcat
+0x06-pointers_arrays_strings/6-cap
+0x06-pointers_arrays_strings/7-1337
+0x06-pointers_arrays_strings/101-print_numbers
+0x06-pointers_arrays_strings/103-add
+0x06-pointers_arrays_strings/104-buffer
+0x06-pointers_arrays_strings/104-main.c
+0x06-pointers_arrays_strings/103-main.c
+0x06-pointers_arrays_strings/101-main.c
+0x06-pointers_arrays_strings/100-main.c
+0x06-pointers_arrays_strings/7-main.c
+0x06-pointers_arrays_strings/6-main.c
+0x06-pointers_arrays_strings/0-main.c
+0x06-pointers_arrays_strings/100-rot13
