--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 0x06-pointers_arrays_strings/6-main.c
 0x06-pointers_arrays_strings/0-main.c
 0x06-pointers_arrays_strings/100-rot13
+0x0C-more_malloc_free/101-mul
